--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"@fontsource/inter": "^5.1.1",
 		"@supabase/ssr": "^0.5.2",
 		"@supabase/supabase-js": "^2.48.1",
-		"lucide-svelte": "^0.475.0"
+		"lucide-svelte": "^0.475.0",
+		"svelte-sonner": "^0.3.28"
 	}
 }
